add dashboard contest

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -9,6 +9,7 @@
 
     &__top {
         @include flex(flex-start, space-between);
+        background-color: $white;
 
         @include mobile {
             flex-direction: column;
