--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -8,6 +8,8 @@ $primary-text-color: #7276a7;
 $second-text-color: #916cff;
 $border-color: #dfe3e833;
 
+$dashboard-bg: #4FBDF0;
+
 $text-exam: #2F3147;
 
 $white: #fff;
