add contest detail

--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -8,7 +8,7 @@ $primary-text-color: #7276a7;
 $second-text-color: #916cff;
 $border-color: #dfe3e833;
 
-$dashboard-bg: #4FBDF0;
+$blue: #4FBDF0;
 
 $text-exam: #2F3147;
 
