--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -69,7 +69,7 @@
                 width: 40%;
                 border-radius: 10px;
                 height: 100px;
-                background-color: $primary-text-color;
+                background-color: $second-text-color;
                 position: relative;
                 margin: 10px 0;
 
@@ -87,6 +87,7 @@
                     left: 50%;
                     transform: translate(-50%, -50%);
                     color: $white;
+                    font-weight: 600;
                 }
             }
         }
