--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -1,6 +1,7 @@
 $primary-bg: #7276a7;
 $second-bg: #fff;
 $hover-bg: #f8f9fa;
+$third-bg: #d6d8da9c;
 $primary: #885efe;
 $button-color: #885efe;
 $third-text-color: #2f3147;
