add login register

--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -7,7 +7,7 @@ $third-text-color: #2f3147;
 $primary-text-color: #7276a7;
 $second-text-color: #916cff;
 $border-color: #dfe3e833;
-
+$text-highlight: #6038cf;
 $blue: #4FBDF0;
 
 $text-exam: #2F3147;
