statistic results exam

--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -97,6 +97,7 @@
             font-weight: 600;
             color: $third-text-color;
             max-width: 10px 0;
+            margin-bottom: 10px;
         }
     }
 }
