--- a/src/pages/Contest/contest.scss
+++ b/src/pages/Contest/contest.scss
@@ -34,8 +34,24 @@
         }
     }
 
+    &__btn {
+        @include flex(center, center);
+
+        button {
+            padding: 15px 30px;
+            margin-bottom: 10px;
+            color: $white;
+            background-color: $blue;
+            outline: none;
+            border: none;
+            cursor: pointer;
+            font-weight: 600;
+            border-radius: 4px;
+        }
+    }
+
     &__content {
-        margin: 30px 50px;
+        margin: 0 50px;
         min-height: 70vh;
 
 
@@ -57,12 +73,26 @@
         }
 
         &__subject {
-            @include flex(center, flex-start);
+            @include flexColumn(flex-start, flex-start);
             flex-wrap: wrap;
+
+            &__title {
+                font-size: 18px;
+                color: $third-text-color;
+                margin-bottom: 20px;
+                font-weight: 600;
+            }
+
+            &__menu {
+                @include flex(center, space-between);
+                flex-wrap: wrap;
+                width: 100%;
+            }
 
             &__item {
                 width: 45%;
                 margin-right: 10px;
+                margin-bottom: 10px;
             }
         }
     }
