--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -1,11 +1,11 @@
 $primary-bg: #7276a7;
 $second-bg: #fff;
 $hover-bg: #f8f9fa;
-$primary: #885efe;
-$button-color: #885efe;
+$primary: #408EC6;
+$button-color: #408EC6;
 $third-text-color: #2f3147;
 $primary-text-color: #7276a7;
-$second-text-color: #916cff;
+$second-text-color: #408EC6;
 $border-color: #dfe3e833;
 
 $blue: #4FBDF0;
