--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -108,6 +108,26 @@
             }
         }
 
+        &__user {
+            @include flex(center, center);
+
+            img {
+                width: 40px;
+                height: 40px;
+                margin-right: 20px;
+            }
+
+            &>.btn {
+                outline: none;
+                border: none;
+                background-color: transparent;
+                color: $third-text-color;
+                font-weight: 400;
+                cursor: pointer;
+                font-size: 14px;
+            }
+        }
+
         &__button {
             width: 30%;
             @include flex(center, flex-end);
