--- a/src/pages/Statictis/statictis.scss
+++ b/src/pages/Statictis/statictis.scss
@@ -98,6 +98,12 @@
 
             .question {}
 
+            .solution {
+                font-size: 16px;
+                color: $blue;
+                margin-bottom: 20px;
+            }
+
             .answers {
 
                 &__true {
